cabal-version:      3.0
name:               tome
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Tristen Mengis
maintainer:         tristen.mengis@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tome-replace
    import:           warnings
    main-is:          tome-replace/Main.hs
    other-modules:    Parser, Table
    build-depends:    base ^>=4.17.2.1, containers, random, yaml, directory, filepath
    hs-source-dirs:   app
    default-language: Haskell2010
